@@ -7,6 +7,8 @@
  [Tags::Output]
  - Add 'output_encoding' parameter.
  - Add $self argument to callbacks as second argument.
+ - Add default 'output_callback' with encoding to 'output_encoding' if
+   defined.
 
 0.10 2020-10-14T00:56:08+02:00
  [Common]
